--- a/LeaveManagementSystem/Content/StyleSheetSignIn.css
+++ b/LeaveManagementSystem/Content/StyleSheetSignIn.css
@@ -1,7 +1,6 @@
-﻿
-body {
+﻿body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: white;
+    background-color: #F4FFF2;
 }
 
 * {
@@ -63,10 +62,6 @@ a {
 }
 
 .container {
-    width: 500px;
-}
-
-.containersignin {
     margin: auto;
     width: 30%;
     padding: 10px;
