--- a/LeaveManagementSystem/Views/Account/UpdatePassword.cshtml
+++ b/LeaveManagementSystem/Views/Account/UpdatePassword.cshtml
@@ -3,8 +3,8 @@
     ViewBag.Title = "UpdatePassword";
 }
 
-
-<style>
+<link rel="stylesheet" href="~/Content/CustomStyleSheet.css">
+@*<style>
     body {
         font-family: Arial, Helvetica, sans-serif;
         background-color: white;
@@ -67,10 +67,11 @@
         background-color: #f1f1f1;
         text-align: center;
     }
+
     .container {
         width: 500px;
     }
-</style>
+</style>*@
 
 <div class="container">
     <h3>Change Password</h3>
@@ -85,8 +86,10 @@
 
         @Html.LabelFor(temp => temp.ConfirmPassword)
         @Html.PasswordFor(temp => temp.ConfirmPassword)
+        <p id="validate-status"></p>
 
         @Html.HiddenFor(temp => temp.EmployeeID)
+
 
         <button type="submit" class="btn btn-success">Save</button>
     }
@@ -98,5 +101,21 @@
 
 
 </div>
+<script>
+    $(document).ready(function () {
+        $("#ConfirmPassword").blur(validate);
+        function validate(event) {
+            var password1 = $("#Password").val();
+            var password2 = $("#ConfirmPassword").val();
 
-  
+            if (password1 == password2) {
+                $("#validate-status").text("match").css("color", "green");
+            }
+            else {
+                $("#validate-status").text("not match").css("color", "red");
+            }
+
+        }
+    });
+
+</script>
