--- a/LeaveManagementSystem/Views/Account/UpdateProfile.cshtml
+++ b/LeaveManagementSystem/Views/Account/UpdateProfile.cshtml
@@ -4,7 +4,8 @@
 }
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
+<link rel="stylesheet" href="~/Content/CustomStyleSheet.css">
+@*<style>
     body {
         font-family: Arial, Helvetica, sans-serif;
         background-color: white;
@@ -71,7 +72,7 @@
     .container {
         width: 500px;
     }
-</style>
+</style>*@
 
 
 
