--- a/LeaveManagementSystem/Views/Employee/ListEmployee.cshtml
+++ b/LeaveManagementSystem/Views/Employee/ListEmployee.cshtml
@@ -6,7 +6,7 @@
      <br /><br />
            <div style="width:100px;">
                <div class="input-group" style="width:300px;">
-                   <form action="/account/employee">
+                   <form action="/employee/Listemployee">
                        <input type="text" class="form-control" placeholder="Search Employee" name="Search">
                        <span class="input-group-btn">
                            <button class="btn btn-default" type="submit">
@@ -22,7 +22,7 @@
                        <div class="card-body">*@
                            <div class="container my-5">
                                <p class="my-5">
-                                   <a href="/account/addnewemployee" class="btn btn-primary">
+                                   <a href="/employee/addnewemployee" class="btn btn-primary">
                                        <i class="fas fa-user-plus ml-2"> Add Employee </i>
                                    </a>
                                </p>
@@ -49,13 +49,13 @@
                                                        <td>@item.LastName</td>
                                                        <td>@item.EmailID</td>
                                                        <td>
-                                                           <a href="~/account/admineditemployee/@item.EmployeeID"
+                                                           <a href="~/employee/admineditemployee/@item.EmployeeID"
                                                               class="btn btn-primary">
                                                                <i class="fas fa-user-edit ml-2"></i>
                                                            </a>
                                                        </td>
                                                        <td>
-                                                           <a href="~/account/deleteemployee/@item.EmployeeID"
+                                                           <a href="~/employee/deleteemployee/@item.EmployeeID"
                                                               class="btn btn-primary">
                                                                <i class="fas fa-user-times ml-2"></i>
                                                            </a>
