--- a/LeaveManagementSystem/Views/Leave/LeaveDetail.cshtml
+++ b/LeaveManagementSystem/Views/Leave/LeaveDetail.cshtml
@@ -1,6 +1,6 @@
 ﻿@model LeaveManagementSystem.ViewModel.RequestVacationViewModel
-
-<style>
+<link rel="stylesheet" href="~/Content/CustomStyleSheet.css">
+@*<style>
     body {
         font-family: Arial, Helvetica, sans-serif;
         background-color: white;
@@ -67,7 +67,7 @@
     .container {
         width: 500px;
     }
-</style>
+</style>*@
 <br />
 <a href="~/Leave/verifyleave" class="btn btn-primary" style="float:right;">Back</a>
 <form action="" method="post">
