--- a/LeaveManagementSystem/Views/Shared/_Layout.cshtml
+++ b/LeaveManagementSystem/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 }
 <html lang="en">
 <head>
-    <title>Bootstrap Example</title>
+    <title>Leave Management System</title>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -68,10 +68,10 @@
                 <br /><br />
                 <ul class="nav nav-pills nav-stacked ">
                     <li><a href="/account/home">Home</a></li>
-                    <li><a href="/Account/sendleaverequest">Leave Request</a></li>
+                    <li><a href="/leave/sendleaverequest">Leave Request</a></li>
                     <li><a href="/Account/updateprofile">Profile</a></li>
                     <li><a href="/Account/updatepassword">Password</a></li>
-                    <li class="hide-element"><a href="/Account/Employee">Employee</a></li>
+                    <li class="hide-element"><a href="/employee/listEmployee">Employee</a></li>
                     <li class="hide-element" ><a href="/designation/adddesignation"> Designation</a></li>
                     <li class="hide-element"><a href="/department/index">Department</a></li>
 
